# CS106B

Assignment1-xcode/0 - Warmup/: Warmup.cpp
Assignment1-xcode/0 - Warmup/Warmup.xcodeproj/: project.pbxproj
Assignment1-xcode/0 - Warmup/Warmup.xcodeproj/project.xcworkspace/xcshareddata/: Warmup.xccheckout
Assignment1-xcode/1 - Consecutive Heads/: AverageValue.txt  ConsecutiveHeads.cpp  Haiku.txt
Assignment1-xcode/1 - Consecutive Heads/Consecutive Heads.xcodeproj/: project.pbxproj
Assignment1-xcode/1 - Consecutive Heads/Consecutive Heads.xcodeproj/project.xcworkspace/xcshareddata/: Consecutive Heads.xccheckout
Assignment1-xcode/2 - Combinations/: Combinations.cpp
Assignment1-xcode/2 - Combinations/Combinations.xcodeproj/: project.pbxproj
Assignment1-xcode/2 - Combinations/Combinations.xcodeproj/project.xcworkspace/xcshareddata/: Combinations.xccheckout
Assignment1-xcode/2 - Combinations/StanfordCPPLib/: console.h
Assignment1-xcode/3 - Numeric Conversions/: NumericConversions.cpp
Assignment1-xcode/3 - Numeric Conversions/Numeric Conversions.xcodeproj/: project.pbxproj
Assignment1-xcode/3 - Numeric Conversions/Numeric Conversions.xcodeproj/project.xcworkspace/xcshareddata/: Numeric Conversions.xccheckout
Assignment1-xcode/4 - Flesch-Kincaid/: FleschKincaid.cpp  Haiku.txt
Assignment1-xcode/4 - Flesch-Kincaid/Flesch-Kincaid.xcodeproj/: project.pbxproj
Assignment2-xcode-8/Random Writer/: RandomWriter.cpp  a.out
Assignment2-xcode-8/Random Writer/Random Writer.xcodeproj/: project.pbxproj
Assignment2-xcode-8/Word Ladder/: WordLadder.cpp
Assignment2-xcode-8/Word Ladder/Word Ladder.xcodeproj/: project.pbxproj
Assignment3-xcode-8/0A Karel Goes Home/: KarelGoesHome.cpp
Assignment3-xcode-8/0A Karel Goes Home/Karel Goes Home.xcodeproj/: project.pbxproj
Assignment3-xcode-8/0B Random Subsets/: RandomSubsets.cpp
Assignment3-xcode-8/0B Random Subsets/Random Subsets.xcodeproj/: project.pbxproj
Assignment3-xcode-8/1 Subsequences/: Subsequences.cpp
Assignment3-xcode-8/1 Subsequences/Subsequences.xcodeproj/: project.pbxproj
Assignment3-xcode-8/2 Sierpinski/: Sierpinski.cpp
Assignment3-xcode-8/2 Sierpinski/Sierpinski.xcodeproj/: project.pbxproj
Assignment3-xcode-8/3 Inverse Genetics/: InverseGenetics.cpp
Assignment3-xcode-8/4 Universal Health Care/: UniversalHealthCoverage.cpp
Assignment3-xcode-8/4 Universal Health Care/Universal Health Care.xcodeproj/: project.pbxproj
Assignment3-xcode-8/StanfordCPPLib/StanfordCPPLib/: console.cpp
Assignment4-xcode-8/: Boggle.cpp  board.cpp  board.h  cube.cpp  cube.h
Assignment4-xcode-8/Boggle.xcodeproj/: project.pbxproj
Assignment4-xcode-8/Boggle.xcodeproj/project.xcworkspace/xcshareddata/: Boggle.xccheckout
Assignment5-xcode-8/: CMakeLists.txt  ListNode.h  ListNodeDouble.h  RageBinaryTree.cpp  RageBinaryTree.h  RageDoubleLinkList.cpp  RageDoubleLinkList.h  RageLinkedList.cpp  RageLinkedList.h  RageVector.cpp  RageVector.h  TreeNode.h  a.out  pqueue-doublylinkedlist.cpp  pqueue-doublylinkedlist.h  pqueue-heap.cpp  pqueue-heap.h  pqueue-linkedlist.cpp  pqueue-linkedlist.h  pqueue-test.cpp  pqueue-vector.cpp  pqueue-vector.h  rageDeque.cpp  rageDeque.h
Assignment5-xcode-8/Priority Queue.xcodeproj/: project.pbxproj
Assignment5-xcode-8/Priority Queue.xcodeproj/project.xcworkspace/xcshareddata/: Priority Queue.xccheckout
Assignment5-xcode-8/Priority Queue.xcodeproj/project.xcworkspace/xcuserdata/rage.xcuserdatad/: UserInterfaceState.xcuserstate
Assignment5-xcode-8/Priority Queue.xcodeproj/xcuserdata/rage.xcuserdatad/xcschemes/: Priority Queue.xcscheme
Assignment5-xcode-8/StanfordCPPLib/: exceptions.cpp
Assignment6-xcode-8/: CMakeLists.txt  HappyHipHop.txt  HuffmanEncoding.cpp  HuffmanEncoding.h  HuffmanEncodingTest.cpp  ReferenceHuffmanEncoding.h  out.txt  testFile
Assignment6-xcode-8/Huffman Encoding.xcodeproj/: project.pbxproj
Assignment6-xcode-8/Huffman Encoding.xcodeproj/project.xcworkspace/xcshareddata/: Huffman Encoding.xccheckout
Assignment7-xcode-8/: Trailblazer.cpp  Trailblazer.h
Assignment7-xcode-8/Trailblazer.xcodeproj/: project.pbxproj
Assignment7-xcode-8/Trailblazer.xcodeproj/project.xcworkspace/xcshareddata/: Trailblazer.xccheckout
(+47 files in other folders)
