cmake_minimum_required(VERSION 3.3)
project(Assignment5_xcode_8)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
        StanfordCPPLib/private/foreachpatch.h
        StanfordCPPLib/private/main.h
        StanfordCPPLib/private/randompatch.h
        StanfordCPPLib/private/tokenpatch.h
        StanfordCPPLib/private/tplatform.h
        StanfordCPPLib/private/version.h
        StanfordCPPLib/stacktrace/call_stack.h
        StanfordCPPLib/stacktrace/call_stack_gcc.cpp
        StanfordCPPLib/stacktrace/call_stack_windows.cpp
        StanfordCPPLib/stacktrace/stack_exception.h
        StanfordCPPLib/base64.cpp
        StanfordCPPLib/base64.h
        StanfordCPPLib/basicgraph.cpp
        StanfordCPPLib/basicgraph.h
        StanfordCPPLib/bitstream.cpp
        StanfordCPPLib/bitstream.h
        StanfordCPPLib/compare.h
        StanfordCPPLib/console.cpp
        StanfordCPPLib/console.h
        StanfordCPPLib/dawglexicon.cpp
        StanfordCPPLib/dawglexicon.h
        StanfordCPPLib/deque.h
        StanfordCPPLib/direction.cpp
        StanfordCPPLib/direction.h
        StanfordCPPLib/error.cpp
        StanfordCPPLib/error.h
        StanfordCPPLib/exceptions.cpp
        StanfordCPPLib/exceptions.h
        StanfordCPPLib/filelib.cpp
        StanfordCPPLib/filelib.h
        StanfordCPPLib/foreach.h
        StanfordCPPLib/gbufferedimage.cpp
        StanfordCPPLib/gbufferedimage.h
        StanfordCPPLib/gevents.cpp
        StanfordCPPLib/gevents.h
        StanfordCPPLib/gfilechooser.cpp
        StanfordCPPLib/gfilechooser.h
        StanfordCPPLib/ginteractors.cpp
        StanfordCPPLib/ginteractors.h
        StanfordCPPLib/gmath.cpp
        StanfordCPPLib/gmath.h
        StanfordCPPLib/gobjects.cpp
        StanfordCPPLib/gobjects.h
        StanfordCPPLib/goptionpane.cpp
        StanfordCPPLib/goptionpane.h
        StanfordCPPLib/graph.h
        StanfordCPPLib/grid.h
        StanfordCPPLib/gtimer.cpp
        StanfordCPPLib/gtimer.h
        StanfordCPPLib/gtypes.cpp
        StanfordCPPLib/gtypes.h
        StanfordCPPLib/gwindow.cpp
        StanfordCPPLib/gwindow.h
        StanfordCPPLib/hashcode.cpp
        StanfordCPPLib/hashcode.h
        StanfordCPPLib/hashmap.h
        StanfordCPPLib/hashset.h
        StanfordCPPLib/lexicon.cpp
        StanfordCPPLib/lexicon.h
        StanfordCPPLib/linkedlist.h
        StanfordCPPLib/main.cpp
        StanfordCPPLib/map.h
        StanfordCPPLib/observable.cpp
        StanfordCPPLib/observable.h
        StanfordCPPLib/platform.cpp
        StanfordCPPLib/platform.h
        StanfordCPPLib/point.cpp
        StanfordCPPLib/point.h
        StanfordCPPLib/pqueue.h
        StanfordCPPLib/queue.h
        StanfordCPPLib/random.cpp
        StanfordCPPLib/random.h
        StanfordCPPLib/regexpr.cpp
        StanfordCPPLib/regexpr.h
        StanfordCPPLib/set.h
        StanfordCPPLib/shuffle.cpp
        StanfordCPPLib/shuffle.h
        StanfordCPPLib/simpio.cpp
        StanfordCPPLib/simpio.h
        StanfordCPPLib/sound.cpp
        StanfordCPPLib/sound.h
        StanfordCPPLib/sparsegrid.h
        StanfordCPPLib/stack.h
        StanfordCPPLib/startup.cpp
        StanfordCPPLib/strlib.cpp
        StanfordCPPLib/strlib.h
        StanfordCPPLib/thread.h
        StanfordCPPLib/timer.cpp
        StanfordCPPLib/timer.h
        StanfordCPPLib/tokenscanner.cpp
        StanfordCPPLib/tokenscanner.h
        StanfordCPPLib/urlstream.cpp
        StanfordCPPLib/urlstream.h
        StanfordCPPLib/vector.h
        StanfordCPPLib/version.cpp
        pqueue-doublylinkedlist.cpp
        pqueue-doublylinkedlist.h
        pqueue-extra.cpp
        pqueue-extra.h
        pqueue-heap.cpp
        pqueue-heap.h
        pqueue-linkedlist.cpp
        pqueue-linkedlist.h
        pqueue-test.cpp
        pqueue-vector.cpp
        pqueue-vector.h
        RageLinkedList.h
        RageLinkedList.cpp
        RageVector.h
        RageVector.cpp
        RageDoubleLinkList.h
        RageDoubleLinkList.cpp)

include_directories(StanfordCPPLib)
#add_library(StanfordCPPLib)
#find_package(StanfordCPPLib)

add_executable(Assignment5_xcode_8 ${SOURCE_FILES})